발표자료 준비

--- a/Announcement/0409_01.md
+++ b/Announcement/0409_01.md
@@ -4,8 +4,6 @@
 
 ### 첫 번째 발표 (4/9일)
 
-##### ------------------------------------------------------------------------
-
 - 리액트란 ?
 - 웹팩 / 바벨 개념 (자세한 설명은 7장에서)
 - CRA로 시작하기
@@ -21,8 +19,6 @@
     - Promise 프로미스
     - async await
     - 제너레이터
-
-##### ------------------------------------------------------------------------
 
 <br>
 
@@ -111,7 +107,7 @@ sciprt {
 
 - 전통적인 방식과는 달리 서버에 요청하지 않아도 페이지 전환이 가능하다.
 
-### 최근 버전 마이그레이션
+### 👉 최근 버전 마이그레이션
 
 - v6
 - 번들 사이즈가 약 70% 정도의 크기로 많이 줄었다.
