ES6 발표준비 마저 하기

--- a/Announcement/0409_01.md
+++ b/Announcement/0409_01.md
@@ -4,21 +4,23 @@
 
 ### 첫 번째 발표 (4/9일)
 
-- 리액트란 ?
-- 웹팩 / 바벨 개념 (자세한 설명은 7장에서)
-- CRA로 시작하기
-- SPA (싱글 페이지 어플리케이션)
-- ES6
-  - 변수를 정의하는 새로운 방법
+```
+1. 리액트란 ?
+2. 웹팩 / 바벨 개념 (자세한 설명은 7장에서)
+3. CRA로 시작하기
+4. SPA (싱글 페이지 어플리케이션)
+5. ES6
+  (1) 변수를 정의하는 새로운 방법
     - var
     - let
     - const
-  - 객체와 배열의 사용성 개선
-  - 함수의 기능
-  - 비동기 프로그래밍
+  (2) 객체와 배열의 사용성 개선
+  (3) 함수의 기능
+  (4) 비동기 프로그래밍
     - Promise 프로미스
     - async await
     - 제너레이터
+```
 
 <br>
 
@@ -31,7 +33,7 @@
 - state는 불변 변수로 관리
   - 불변 변수란 ? 어떤 객체 속성을 만들 때 새로운 객체를 만들어 값을 할당
 - 가상돔(virtual DOM)
-  - 이를 통해 렌더링 성능 최적화 가능
+  - 이를 통해 UI를 빠르게 업데이트
 
 <br>
 <br>
@@ -132,9 +134,86 @@ const { id } = useParams<'id'>();
 <br>
 <br>
 
-## 비동기 프로그래밍
+## 5. ES6 함수형 프로그래밍
 
-### Promise 란
+### 👉 변수를 정의하는 새로운 방법
+
+```
+var a = 1;
+let a = 1;
+const a = 1;
+```
+
+1. var
+
+- 변수다
+- 함수 스코프
+- 호이스팅
+
+```
+console.log(a)
+
+var a = 1;
+```
+
+이것에 대한 결과값은 ?
+
+- 클로저
+
+<br>
+
+2. let
+
+- 변수다
+- 블록 스코프
+
+<br>
+
+3. const
+
+- 상수다 (변수 재할당 X)
+- 블록 스코프
+- 속성값은 바뀔 수 있다.
+
+```
+const animal = { a: 'pig' };
+animal.a = 'cat';
+animal.b = 'dog';
+
+console.log(animal)
+```
+
+이것에 대한 결과값은 ?
+
+<br>
+<br>
+
+```
+const arr =[10, 20];
+arr[0] = 100;
+arr.push(300);
+console.log(arr)
+```
+
+이것에 대한 결과값은 ?
+
+<br>
+<br>
+
+📍 수정할 수 없도록 차단하려면 얼려버리자 !! `Object.freeze`
+
+<br>
+<br>
+
+### 👉 객체와 배열의 사용성 개선
+
+### 👉 함수의 기능
+
+### 👉 비동기 프로그래밍
+
+<br>
+
+#### Promise 란
 
 - 비동기적인 것을 동기적으로 진행되도록.
 - then을 사용하여 콜백지옥을 모면할 수 있다.
