발표자료 완료

--- a/Announcement/0409_01.md
+++ b/Announcement/0409_01.md
@@ -207,7 +207,187 @@ console.log(arr)
 
 ### 👉 객체와 배열의 사용성 개선
 
-### 👉 함수의 기능
+<br>
+
+**단축 속성명 : 객체 리터럴**
+
+- 객체 리터럴 코드를 간편하게 작성할 목적으로 만들어진 문법
+
+<br>
+
+**계산된 속성명**
+
+- 객체 속성 동적으로 결정
+
+<br>
+
+**전개 연산자 (Spread)**
+
+- 매개변수 개수는 항상 n개로 고정되어 있는데, 전개 연산자를 사용하면 동적으로 함수 매개변수를 사용할 수 있다.
+
+```
+const arr1 = [1,2,3];
+
+(1) console.log(...arr1, 1,2,3);
+(2) console.log(1,2, ...arr1, ,3);
+```
+
+이것에 대한 결과값은 ?
+
+<br>
+
+### 구조분해할당 (= 디스트럭처링)
+
+**배열 비구조화**
+
+배열의 여러 속성값을 변수로 쉽게 할당할 수 있는 문법이다.
+
+```
+const arr = [1, 2];
+const [a,b] = arr;
+
+console.log(a)
+console.log(b)
+```
+
+변수의 경우
+<br>
+
+값이 `undefined`일 때,
+
+```
+let a, b;
+[a, b] = [1, 2];
+```
+
+<br>
+
+응용
+
+```
+const arr = [1];
+const [a = 10, b = 20] = arr;
+
+console.log(a);
+console.log(b);
+```
+
+이것에 대한 결과값은 ?
+
+<br>
+
+**객체 비구조화** <br>
+객체의 여러 속성값을 변수로 쉽게 할당할 수 있는 문법이다.
+
+```
+const obj = {age: 26, name : 'hyunju'};
+const {age, name} = obj;
+
+console.log(age)
+console.log(name)
+```
+
+<br>
+
+### 👉 강화된 함수의 기능
+
+#### 매개변수
+
+**매개변수 기본값**
+
+```
+function hj(a = 1) {
+  console.log({a});
+}
+
+hj();
+```
+
+이것에 대한 결과값은 ?
+
+<br>
+
+**매개변수 기본값으로 함수 호출**
+
+```
+function default() {
+  return 1;
+}
+
+function hj( a = default) {
+  console.log({a});
+}
+
+hj();
+```
+
+이것에 대한 결과값은 ?
+
+<br>
+
+**나머지 (Spread 방식) 매개변수를 사용해서**
+
+```
+function hj(a, ...rest) {
+  consoloe.log({a, rest});
+}
+
+hj(1,2,3);
+```
+
+이것에 대한 결과값은 ?
+
+<br>
+
+**명명된 매개변수**
+이름과 값을 동시에 선언 가능
+
+```
+const arr = [1,2,3,4,5]
+
+(1) const cat = getValue(arr, 2, 3);
+(2) const dog = getValue({ arr, first: 2, two: 3});
+```
+
+<br>
+
+**화살표 함수**
+
+기존 방식
+
+```
+fucntion a () { }
+```
+
+화살표
+
+```
+const a = () => { }
+```
+
+반환을 할 값에는 `retrun`
+
+<br>
+
+기존 함수 방식의 this
+
+```
+var value = 0;
+
+var obj = {
+	value: 1,
+    setValue: function() {
+    this.value = 2; // ⭐ this === obj
+    (function() {
+    	this.value = 3 // ⭐ this === window 바로 함수를 실행 했기 때문이다.
+    })();
+  }
+}
+
+obj.setValue(); // 3
+console.log(value); // 2
+console.log(obj.value); // undefined
+```
 
 ### 👉 비동기 프로그래밍
 
@@ -220,7 +400,63 @@ console.log(arr)
 
 - 미확정 상태 : pending (= 미해결)
 - 확정 상태 : resolved
-  - 성공 fullfil
+  - 성공 fullfilled
   - 실패 rejected
 
 resolved는 then을 타고, reject(실패)는 catch를 탄다.
+
+```
+let myFirstPromise = new Promise((resolve, reject) => {
+  setTimeout( function() {
+    resolve("성공!")
+  }, 250)
+})
+
+myFirstPromise.then((successMessage) => {
+  console.log("와! " + successMessage)
+});
+```
+
+#### async await
+
+- promise, then 보다 가독성이 좋다.
+- 함수 내부에서 예외가 발생하는 경우 예외처리 기능인 try, catch 문을 사용하여 예외처리를 한다.
+
+```
+const func = async () => {
+  try {
+    const value = await someFunc();
+    const result = await anotherFunc();
+    return result;
+  } catch (err) {
+    throw err;
+  }
+}
+
+------------------------------------
+
+function getQuote() {
+  let quote = "ㅎㅇ";
+  return quote;
+}
+
+
+async function main() {
+  try {
+    var quote = await getQuote();
+    console.log(quote);
+  } catch (error) {
+    console.error(error);
+  }
+}
+
+main();
+```
+
+#### 제너레이터
+
+- 문법 구조가 특이하다 `function*`
+- 호출하려면 next() 메서드 사용
+- next
+  - value
+  - done
