4장 발표 목차 정리

--- a/Announcement/0422_03.md
+++ b/Announcement/0422_03.md
@@ -1,4 +1,4 @@
-# 👩‍💻실전 리액트 프로그래밍 1,2강 발표
+# 👩‍💻실전 리액트 프로그래밍 3강 발표
 
 ## 🚩 목차
 
@@ -68,3 +68,12 @@ function App() {
 - title이라는 데이터를 수정하고 싶다면 title 상탯값을 가진 컴포넌트에서 관리하는 `상탯값 변경 함수를 이용`해야한다.
 - 속성값과 달리 상탯값은 직접 수정이 가능하다.
 
+#### 리액트 요소 이해하기
+
+```
+const ele = (
+   <a key="key1" href="google.com">구글<a>
+)
+```
+
+이 변수는 creat
