react.memo에 대해서

--- a/Announcement/0504_04.md
+++ b/Announcement/0504_04.md
@@ -18,3 +18,15 @@
 - 속성값과 상탯값을 불변 변수로 관리하는 방법
 - 가상 돔에서의 성능 최적화
 ```
+
+<br>
+
+#### React.memo 함수로 감싼 컴포넌트
+
+React.memo 함수로 감싼 컴포넌트라면 속성값 비교 함수가 호출된다. 이 함수는 이전 이후 속성값을 매개변수로 받아서 참 또는 거짓을 반환하는데, 참을 반환하면 렌더링을 멈추고 거짓이면 컴포넌트 함수를 실행해서 가상 돔을 업뎃한 후 변경된 부분만 실제 돔에 반영한다.
+
+#### React.memo 함수로 감싸지 않은 컴포넌트
+
+항상 거짓을 반환하는 속성값 비교 함수가 사용된다고 생각할 수 있다. 이때는 속성값이 변경되지 않아도 부모 컴포넌트가 렌더링 될 때마다 자식 컴포넌트도 렌더링된다.
+
+속성값 비교 함수가 항상 거짓을 반환해도 속성값이 변경되지 않으면 실제 돔도 변경되지 않기 때문에 대부분 문제가 되지 않음. 하지만 렌더링 성능이 중요한 상황에서는 React.memo 함수로 감싸서 컴포넌트 함수의 실행과 가상 돔의 계산을 생략할 수 있다.
