--- a/Announcement/0520_05.md
+++ b/Announcement/0520_05.md
@@ -1,13 +1,34 @@
-### class형 컴포넌트에 관한 발표
+## class형 컴포넌트에 관한 발표
 
-#### 💥 class와 Hooks 비교하기
+### 💥 class와 Hooks 비교하기
 
-#### hook의 장점
+### hook의 장점
 
 - hooks는 코드 자체가 짧아져서 간결한걸 좋아하는 사람들한테 추천한다.
 - class대신에 className을 사용한다.
 
+### 클래스 vs 함수형
+
+#### 클래스
+
+- 더 많은 기능 제공
+- 더 긴 코드양
+- 더 복잡한 코드
+- 더딘 성능
+
+#### 함수형
+
+- 더 적은 기능 제공
+- 짧은 코드량
+- 더 심플한 코드
+- 더 빠른 성능
+
 #### 클래스 컴포넌트형 방식
+
+- constructor : 모든걸 다 inital해준다. 초기화
+- render : 렌더링해준다. 뷰단에 보여지게 됨
+- 그 다음으로 생명주기는 componentDidMount, 등등을 사용할 수 있다.
+- 그 생명주기가 hooks로 업데이트 되면서 useEffect로 생명주기를 다룰 수 있다.
 
 ```
 class Mycompo extends React.Component {
